# mplcursors

./: .coveragerc  .doc-requirements.txt  .gitattributes  .gitignore  .ignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  NOTES.md  README.md  README.rst  environment.yml  pyproject.toml  release.sh  setup.cfg  setup.py  setup_mplcursors_pth.py  setupext.py
.github/workflows/: build.yml
doc/: .gitignore  Makefile  conf.py  index.rst  make.bat  modules.rst
doc/source/: _local_ext.py  conf.py  index.rst  modules.rst  mplcursors.rst
examples/: README.txt  artist_labels.py  bar.py  bar_example.py  basic.py  basic_single_annotation.py  basic_two_axes.py  change_popup_color.py  contour.py  contour_example.py  customize_keyboard_shortcuts.py  dataframe.py  date.py  date_example.py  draggable_example.py  highlight.py  highlighting_example.py  hover.py  hover_example.py  image.py  image_example.py  keyboard_shortcuts.py  labeled_points.py  labeled_points_example.py  multi_highlight_example.py  nondraggable.py  paired_highlight.py  scatter.py  scatter_example.py  show_artist_labels.py  step.py
lib/mplcursors/: __init__.py  _mplcursors.py  _pick_info.py  _version.py
mplcursors/: __init__.py  _contains_test.py  _convenience.py  _mplcursors.py  _pick_info.py
src/mplcursors/: __init__.py  _mplcursors.py  _pick_info.py
tests/: __init__.py  conftest.py  test_basic.py  test_mplcursors.py
