[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mplcursors"
description = "Interactive data selection cursors for Matplotlib."
readme = "README.rst"
authors = [{name = "Antony Lee"}]
urls = {Repository = "https://github.com/anntzer/mplcursors"}
license = {text = "zlib"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib",
    "License :: OSI Approved :: zlib/libpng License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.1,!=3.7.1",
    "importlib-metadata; python_version<'3.8'",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "pandas",
    "pydata_sphinx_theme!=0.10.1",
    "sphinx",
    "sphinx-gallery",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0+unknown"

[tool.coverage.run]
branch = true
source_pkgs = ["mplcursors"]

[tool.coverage.paths]
source = ["src/", "/**/python*/site-packages/"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",  # Required!  Some tests check that no warnings are being emitted.
    "ignore::DeprecationWarning",
    "error::DeprecationWarning:mplcursors",
]
